# grpc-example

./: CMakeLists.txt  README.md  vcpkg.json.in
.github/workflows/: test.yml
client/: CMakeLists.txt
client/source/: main.cpp  main_async.cpp  main_cb.cpp  main_sync.cpp
client/tests/: CMakeLists.txt
proto/: CMakeLists.txt
server/: CMakeLists.txt
server/source/: main.cpp  main_async.cpp  main_cb.cpp  main_sync.cpp
server/tests/: CMakeLists.txt
source/: main.cpp
tests/: CMakeLists.txt
